--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Floor</title>
+    <head>
+        <meta charset="UTF-8">
+        <title>Floor</title>
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
 
-    <link rel="stylesheet" type="text/css" href="index.css">
+        <link rel="stylesheet" type="text/css" href="index.css">
 
-</head>
+        <script src="node_modules/jquery/dist/jquery.js"></script>
+
+    </head>
+
 <body>
 
-    <h1>Floor</h1>
+    <div id="column">
 
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
+        <div id="floor"></div>
 
-    <script>
-        // You can also require other files to run in this process
-        require('./renderer.js')
-    </script>
+    </div>
+
+    <p>Click on the cell to change state</p>
 
 </body>
+
+<script src="index.js"></script>
+
 </html>
