--- a/web/index.html
+++ b/web/index.html
@@ -39,6 +39,7 @@
                     <span onclick="start()">Старт</span>
                     <span onclick="stop()">Стоп</span>
                     <span>Сирена</span>
+                    <span onclick="test()">Тест</span>
                 </div>
 
                 <div class="menu">
