--- a/web/index.html
+++ b/web/index.html
@@ -31,32 +31,33 @@
             <div id="menu" class="column">
 
                 <div class="menu">
-                    <span onclick="up()">Поднять</span>
-                    <span onclick="down()">Опустить</span>
+                    <div onclick="up()">Поднять</div>
+                    <div onclick="down()">Опустить</div>
                 </div>
 
                 <div class="menu">
-                    <span onclick="start()">Старт</span>
-                    <span onclick="stop()">Стоп</span>
-                    <span>Сирена</span>
-                    <span onclick="test()">Тест</span>
+                    <div onclick="start()">Старт</div>
+                    <div onclick="stop()">Стоп</div>
+                    <div>Сирена</div>
+                    <div onclick="test()">Тест</div>
                 </div>
 
                 <div class="menu">
-                    <span onclick="htmlMap()">Сброс</span>
-                    <span onclick="save()">Сохранить</span>
-                    <span onclick="load()">Загрузить</span>
+                    <div onclick="htmlMap()">Сброс</div>
+                    <div onclick="save()">Сохранить</div>
+                    <div onclick="load()">Загрузить</div>
                 </div>
 
                 <div class="menu">
-                    <span>Победила</span>
-                    <span onclick="save()">[1]</span>
-                    <span onclick="save()">[2]</span>
-                    <span onclick="save()">[3]</span>
-                    <span onclick="save()">[4]</span>
+                    <div>Победила</div>
+                    <div onclick="save()">1</div>
+                    <div onclick="save()">2</div>
+                    <div onclick="save()">3</div>
+                    <div onclick="save()">4</div>
                 </div>
 
             </div>
+
         </main>
 
     </body>
