--- a/web/index.html
+++ b/web/index.html
@@ -39,17 +39,17 @@
                     <div onclick="start()">Старт</div>
                     <div onclick="stop()">Стоп</div>
                     <div>Сирена</div>
-                    <div onclick="test()">Тест</div>
+                    <!--<div onclick="test()">Тест</div>-->
                 </div>
 
-                <div class="menu">
-                    <div onclick="htmlMap()">Сброс</div>
-                    <div onclick="save()">Сохранить</div>
-                    <div onclick="load()">Загрузить</div>
-                </div>
+                <!--<div class="menu">-->
+                    <!--<div onclick="htmlMap()">Сброс</div>-->
+                    <!--<div onclick="save()">Сохранить</div>-->
+                    <!--<div onclick="load()">Загрузить</div>-->
+                <!--</div>-->
 
                 <div class="menu">
-                    <div>Победила</div>
+                    <div style="box-shadow: none">Победила</div>
                     <div onclick="save()">1</div>
                     <div onclick="save()">2</div>
                     <div onclick="save()">3</div>
