--- a/web/index.html
+++ b/web/index.html
@@ -31,15 +31,15 @@
             <div id="menu" class="column">
 
                 <div class="menu">
-                    <div onclick="up()">Поднять</div>
-                    <div onclick="down()">Опустить</div>
+                    <div onclick="start()">Старт</div>
+                    <div onclick="stop()">Стоп</div>
+                    <!--<div>Сирена</div>-->
+                    <!--<div onclick="test()">Тест</div>-->
                 </div>
 
                 <div class="menu">
-                    <div onclick="start()">Старт</div>
-                    <div onclick="stop()">Стоп</div>
-                    <div>Сирена</div>
-                    <!--<div onclick="test()">Тест</div>-->
+                    <div onclick="up()">Поднять</div>
+                    <div onclick="down()">Опустить</div>
                 </div>
 
                 <!--<div class="menu">-->
@@ -47,6 +47,14 @@
                     <!--<div onclick="save()">Сохранить</div>-->
                     <!--<div onclick="load()">Загрузить</div>-->
                 <!--</div>-->
+
+                <div class="menu">
+                    <div style="box-shadow: none">Сирена</div>
+                    <div onclick="save()">1</div>
+                    <div onclick="save()">2</div>
+                    <div onclick="save()">3</div>
+                    <div onclick="save()">4</div>
+                </div>
 
                 <div class="menu">
                     <div style="box-shadow: none">Победила</div>
