UI fix and TCP api

--- a/web/index.html
+++ b/web/index.html
@@ -31,37 +31,36 @@
             <div id="menu" class="column">
 
                 <div class="menu">
-                    <div onclick="start()">Старт</div>
-                    <div onclick="stop()">Стоп</div>
-                    <!--<div>Сирена</div>-->
-                    <!--<div onclick="test()">Тест</div>-->
+                    <div onclick="start()" class="button">Старт</div>
+                    <div onclick="stop()" class="button disabled">Стоп</div>
+                    <div onclick="test()" class="button">Тест</div>
                 </div>
 
                 <div class="menu">
-                    <div onclick="up()">Поднять</div>
-                    <div onclick="down()">Опустить</div>
+                    <div onclick="up()" class="button">Поднять</div>
+                    <div onclick="down()" class="button disabled">Опустить</div>
                 </div>
 
-                <!--<div class="menu">-->
-                    <!--<div onclick="htmlMap()">Сброс</div>-->
-                    <!--<div onclick="save()">Сохранить</div>-->
-                    <!--<div onclick="load()">Загрузить</div>-->
-                <!--</div>-->
+                <div class="menu">
+                    <div onclick="htmlMap()" class="button">Сброс</div>
+                    <div onclick="save()" class="button">Сохранить</div>
+                    <div onclick="load()" class="button">Загрузить</div>
+                </div>
 
                 <div class="menu">
                     <div style="box-shadow: none">Сирена</div>
-                    <div onclick="save()">1</div>
-                    <div onclick="save()">2</div>
-                    <div onclick="save()">3</div>
-                    <div onclick="save()">4</div>
+                    <div onclick="save()" class="button">1</div>
+                    <div onclick="save()" class="button">2</div>
+                    <div onclick="save()" class="button">3</div>
+                    <div onclick="save()" class="button">4</div>
                 </div>
 
                 <div class="menu">
                     <div style="box-shadow: none">Победила</div>
-                    <div onclick="save()">1</div>
-                    <div onclick="save()">2</div>
-                    <div onclick="save()">3</div>
-                    <div onclick="save()">4</div>
+                    <div onclick="save()" class="button">1</div>
+                    <div onclick="save()" class="button">2</div>
+                    <div onclick="save()" class="button">3</div>
+                    <div onclick="save()" class="button">4</div>
                 </div>
 
             </div>
