--- a/web/index.html
+++ b/web/index.html
@@ -17,8 +17,8 @@
         <link rel="stylesheet" type="text/css" href="css/media.css?v3">
 
         <script src="./js/jquery-3.3.1.min.js"></script>
-        <!--<script src="./js/utils/socket.io.slim.js"></script>-->
-        <!--<script src="js/utils/ga.js"></script>-->
+        <script src="./js/socket.io.slim.js"></script>
+        <script src="./js/client.js"></script>
 
     </head>
 
