--- a/web/index.html
+++ b/web/index.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="menu">
-                    <div style="box-shadow: none">Сирена</div>
+                    <div>Победила</div>
                     <div onclick="save()" class="button">1</div>
                     <div onclick="save()" class="button">2</div>
                     <div onclick="save()" class="button">3</div>
@@ -56,11 +56,7 @@
                 </div>
 
                 <div class="menu">
-                    <div style="box-shadow: none">Победила</div>
-                    <div onclick="save()" class="button">1</div>
-                    <div onclick="save()" class="button">2</div>
-                    <div onclick="save()" class="button">3</div>
-                    <div onclick="save()" class="button">4</div>
+                    <div class="button">Сирена</div>
                 </div>
 
             </div>
