--- a/web/index.html
+++ b/web/index.html
@@ -50,13 +50,13 @@
                 <div class="menu">
                     <div>Победила</div>
                     <div onclick="save()" class="button">1</div>
-                    <div onclick="save()" class="button">2</div>
-                    <div onclick="save()" class="button">3</div>
-                    <div onclick="save()" class="button">4</div>
+                    <div onclick="save()" class="button" style="background-color: #3a7eff">2</div>
+                    <div onclick="save()" class="button" style="background-color: rgba(0,0,0,0.47)">3</div>
+                    <div onclick="save()" class="button" style="background-color: red">4</div>
                 </div>
 
                 <div class="menu">
-                    <div class="button">Сирена</div>
+                    <div class="button" onclick="window.open('/siren', '_blank');">Сирена</div>
                 </div>
 
             </div>
