--- a/web/siren.html
+++ b/web/siren.html
@@ -26,10 +26,10 @@
 
         <div id="siren">
 
-            <div class="white"></div>
-            <div class="blue"></div>
-            <div class="black"></div>
-            <div class="red"></div>
+            <div class="white" onclick="siren(1)">1</div>
+            <div class="blue" onclick="siren(2)">2</div>
+            <div class="black" onclick="siren(1)">3</div>
+            <div class="red" onclick="siren(1)">4</div>
 
         </div>
 
