--- a/web/index.html
+++ b/web/index.html
@@ -36,12 +36,12 @@
 
                 <div class="menu">
                     <div onclick="up()" class="button">Up</div>
-                    <div onclick="down()" class="button disabled">Down</div>
+                    <div onclick="down()" class="button ">Down</div>
                 </div>
 
                 <div class="menu">
                     <div onclick="start()" class="button">Start</div>
-                    <div onclick="stop()" class="button disabled">Stop</div>
+                    <div onclick="stop()" class="button ">Stop</div>
                     <div onclick="test()" class="button">Test</div>
                 </div>
 
