Some colors update

--- a/web/index.html
+++ b/web/index.html
@@ -55,8 +55,8 @@
                     <div class="">Win</div>
                     <div onclick="win(1)" class="button">1</div>
                     <div onclick="win(2)" class="button" style="background-color: #3a7eff">2</div>
-                    <div onclick="win(3)" class="button" style="background-color: rgba(0,0,0,0.47)">3</div>
-                    <div onclick="win(4)" class="button" style="background-color: red">4</div>
+                    <div onclick="win(3)" class="button" style="background-color: black; color: white">3</div>
+                    <div onclick="win(4)" class="button" style="background-color: red; color: white">4</div>
                 </div>
 
             </div>
