--- a/web/index.html
+++ b/web/index.html
@@ -19,6 +19,7 @@
         <script src="./js/jquery-3.3.1.min.js"></script>
         <script src="./js/socket.io.slim.js"></script>
         <script src="./js/client.js"></script>
+        <script src="./js/roster.js"></script>
 
     </head>
 
