--- a/web/siren.html
+++ b/web/siren.html
@@ -19,6 +19,7 @@
         <script src="./js/jquery-3.3.1.min.js"></script>
         <script src="./js/socket.io.slim.js"></script>
         <script src="./js/client.js"></script>
+        <script src="./js/roster.js"></script>
 
     </head>
 
@@ -28,8 +29,8 @@
 
             <div class="white" onclick="siren(1)">1</div>
             <div class="blue" onclick="siren(2)">2</div>
-            <div class="black" onclick="siren(1)">3</div>
-            <div class="red" onclick="siren(1)">4</div>
+            <div class="black" onclick="siren(3)">3</div>
+            <div class="red" onclick="siren(4)">4</div>
 
         </div>
 
