--- a/web/siren.html
+++ b/web/siren.html
@@ -27,10 +27,10 @@
 
         <div id="siren">
 
-            <div class="white" onclick="siren(1)">1</div>
-            <div class="blue" onclick="siren(2)">2</div>
-            <div class="black" onclick="siren(3)">3</div>
-            <div class="red" onclick="siren(4)">4</div>
+            <div class="team-first" onclick="siren(1)">1</div>
+            <div class="team-second" onclick="siren(2)">2</div>
+            <div class="team-third" onclick="siren(3)">3</div>
+            <div class="team-forth" onclick="siren(4)">4</div>
 
         </div>
 
