--- a/web/index.html
+++ b/web/index.html
@@ -41,15 +41,15 @@
                 </div>
 
                 <div class="menu">
-                    <div onclick="start()" class="button">Start</div>
-                    <div onclick="stop()" class="button ">Stop</div>
-                    <div onclick="test()" class="button">Test</div>
+                    <!--<div onclick="start()" class="button">Start</div>-->
+                    <!--<div onclick="stop()" class="button ">Stop</div>-->
+                    <!--<div onclick="test()" class="button">Test</div>-->
                 </div>
 
                 <div class="menu">
-                    <div onclick="load()" class="button">Load</div>
-                    <div onclick="save()" class="button">Save</div>
-                    <div onclick="htmlMap()" class="button">Reset</div>
+                    <!--<div onclick="load()" class="button">Load</div>-->
+                    <!--<div onclick="save()" class="button">Save</div>-->
+                    <!--<div onclick="htmlMap()" class="button">Reset</div>-->
                 </div>
 
                 <div class="menu">
