--- a/web/index.html
+++ b/web/index.html
@@ -54,10 +54,10 @@
 
                 <div class="menu">
                     <div class="">Win</div>
-                    <div onclick="win(1)" class="button team-first">1</div>
-                    <div onclick="win(2)" class="button team-second">2</div>
-                    <div onclick="win(3)" class="button team-third">3</div>
-                    <div onclick="win(4)" class="button team-forth">4</div>
+                    <div onclick="win('A')" class="button team-first">1</div>
+                    <div onclick="win('B')" class="button team-second">2</div>
+                    <div onclick="win('C')" class="button team-third">3</div>
+                    <div onclick="win('D')" class="button team-forth">4</div>
                 </div>
 
             </div>
