--- a/web/index.html
+++ b/web/index.html
@@ -41,8 +41,8 @@
                 </div>
 
                 <div class="menu">
-                    <div onclick="start()" class="button">Start</div>
-                    <div onclick="stop()" class="button ">Stop</div>
+                    <div onclick="start()" id="start" class="button">Start</div>
+                    <div onclick="stop()" id="stop" class="button disabled">Stop</div>
                     <!--<div onclick="test()" class="button">Test</div>-->
                 </div>
 
