--- a/web/index.html
+++ b/web/index.html
@@ -42,7 +42,7 @@
 
                 <div class="menu">
                     <div onclick="start()" id="start" class="button">Start</div>
-                    <div onclick="stop()" id="stop" class="button disabled">Stop</div>
+                    <div onclick="stop()" id="stop" class="button">Stop</div>
                     <!--<div onclick="test()" class="button">Test</div>-->
                 </div>
 
