--- a/web/siren.html
+++ b/web/siren.html
@@ -27,10 +27,13 @@
 
         <div id="siren">
 
-            <div class="team-first" onclick="siren(1)">1</div>
-            <div class="team-second" onclick="siren(2)">2</div>
-            <div class="team-third" onclick="siren(3)">3</div>
-            <div class="team-forth" onclick="siren(4)">4</div>
+            <div class="team-first" onclick="siren(101)">
+                1
+                <div onclick="sirenx(101)">STOP</div>
+            </div>
+            <div class="team-second" onclick="siren(102)">2</div>
+            <div class="team-third" onclick="siren(103)">3</div>
+            <div class="team-forth" onclick="siren(104)">4</div>
 
         </div>
 
