--- a/web/siren.html
+++ b/web/siren.html
@@ -27,13 +27,22 @@
 
         <div id="siren">
 
-            <div class="team-first" onclick="siren(101)">
-                1
-                <div onclick="sirenx(101)">STOP</div>
+            <div class="team-first">
+                <div onclick="siren(101)" class="siren">1</div>
+                <div onclick="sirenx(101)" class="sirenx">STOP</div>
             </div>
-            <div class="team-second" onclick="siren(102)">2</div>
-            <div class="team-third" onclick="siren(103)">3</div>
-            <div class="team-forth" onclick="siren(104)">4</div>
+            <div class="team-second">
+                <div onclick="siren(102)" class="siren">2</div>
+                <div onclick="sirenx(102)" class="sirenx">STOP</div>
+            </div>
+            <div class="team-third">
+                <div onclick="siren(103)" class="siren">3</div>
+                <div onclick="sirenx(103)" class="sirenx">STOP</div>
+            </div>
+            <div class="team-forth">
+                <div onclick="siren(104)" class="siren">4</div>
+                <div onclick="sirenx(104)" class="sirenx">STOP</div>
+            </div>
 
         </div>
 
