--- a/web/index.html
+++ b/web/index.html
@@ -43,6 +43,7 @@
                 <div class="menu">
                     <div onclick="start()" id="start" class="button">Start</div>
                     <div onclick="stop()" id="stop" class="button">Stop</div>
+                    <div onclick="white()" class="button">White</div>
                     <!--<div onclick="test()" class="button">Test</div>-->
                 </div>
 
