--- a/web/siren.html
+++ b/web/siren.html
@@ -16,8 +16,8 @@
         <link rel="stylesheet" type="text/css" href="css/index.css?v4">
         <link rel="stylesheet" type="text/css" href="css/media.css?v4">
 
-        <script src="./js/jquery-3.3.1.min.js"></script>
-        <script src="./js/socket.io.slim.js"></script>
+        <script src="js/lib/jquery-3.3.1.min.js"></script>
+        <script src="js/lib/socket.io.slim.js"></script>
         <script src="./js/client.js"></script>
         <script src="./js/roster.js"></script>
 
